--- a/src/transformers/configs/train_configs.yaml
+++ b/src/transformers/configs/train_configs.yaml
@@ -10,18 +10,19 @@ model:
   model_max_length: 512
 
 dataset:
-  train_csv: "/media/tapicella/Data/data/SImCa_test/fine_tuning/train_coca_ens_clip_gibson.csv"
-  val_csv: "/media/tapicella/Data/data/SImCa_test/fine_tuning/val_coca_ens_clip_gibson.csv"
-  use_augmentation: True
+  train_csv: "/media/tapicella/Data/data/gibson_randomGoal_coca_mask2former_train.csv"
+  val_csv: "/media/tapicella/Data/data/gibson_randomGoal_coca_mask2former_train.csv"
+  use_augmentation: False
 
 training_setup:
-  multigpu: True
-  seed: 42
-  batch_size: 64
+  multigpu: False
+  seed: 44
+  batch_size: 2
   learning_rate: 0.0001
-  num_workers: 4
+  num_workers: 0
   epochs: 10
   save_interval: 1
   early_stopping: True
   patience: 3
+  use_triplet: True  # If True, the actual batch size will be batch_size*3
   use_negative: False
